fixed tet on mobile 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -314,8 +314,8 @@
     left: 20px;
   }
   .masthead .ml12 {
-    font-size: .9rem;
-    letter-spacing: .5rem;
+    font-size: .8rem;
+    letter-spacing: .4rem;
   }
   .masthead h1 {
     font-size: 1.5rem;
