--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -189,8 +189,8 @@
     }
 
     .ml12 {
-      font-size: .9rem;
-      letter-spacing: .5rem;
+      font-size: .8rem;
+      letter-spacing: .4rem;
     }
     h1 {
       font-size: 1.5rem;
